fix wrapped articles pagination button in next line is overlapping first line when viewport width is too small

--- a/assets/css/kratos.css
+++ b/assets/css/kratos.css
@@ -501,6 +501,14 @@ button:focus {
 4. 分页按钮
 --------------------------------------------------------------*/
 
+.k-main .board .paginations > * {
+    display: inline-block;
+}
+
+.k-main .board .paginations .kicon {
+    line-height: 25px;
+}
+
 .k-main .board .paginations {
   margin: 23px auto;
   width: 100%;
